--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,13 @@ quarkus.hibernate-orm.log.sql=true
 ### Flyway config
 #quarkus.flyway.baseline-version=0
 quarkus.flyway.migrate-at-start=true
+
+### Test Properties
+%test.quarkus.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
+%test.quarkus.datasource.driver=org.h2.Driver
+%test.quarkus.datasource.username=sa
+%test.quarkus.datasource.password=
+%test.quarkus.hibernate-orm.dialect=org.hibernate.dialect.H2Dialect
+%test.quarkus.hibernate-orm.database.generation=create-drop
+%test.quarkus.hibernate-orm.log.sql=true
+%test.quarkus.flyway.migrate-at-start=false
