Attempt to setup CI for the project.[7]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,13 @@
 image: java:8
 
 stages:
-  - build
+  - compile
   - test
 
 build:
-  stage: build
-  script: "./mvnw install -DskipTests -B"
+  stage: compile
+  script: "./mvnw install -DskipTests -B -V"
 
 test:
   stage: test
-  script: "./mvnw install"
+  script: "./mvnw install -B -V -Dsurefire.useFile=false"
