Attempt to setup CI for the project.[10]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -15,4 +15,4 @@ compile:
 
 test:
   stage: test
-  script: "./mvnw install -B -V -Dsurefire.useFile=false -Xmx512m"
+  script: "./mvnw install -B -V -Dsurefire.useFile=false"
