Attempt to setup CI for the project.[12]

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,4 +18,4 @@ compile:
 
 test:
   stage: test
-  script: "./mvnw test -B -V -Dsurefire.useFile=false"
+  script: "./mvnw install -B -V -Dsurefire.useFile=false"
