--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,8 +19,8 @@ compile:
 
 test:
   stage: test
-  script: "./mvnw test -B -V -Dsurefire.useFile=false"
+  script: "./mvnw test -B -V -Dsurefire.useFile=false -Dprofile=test"
 
 native:
   stage: native
-  script: "./mvnw package -Pnative"
+  script: "./mvnw package -Pnative -Dquarkus.native.container-build=true"
