--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,6 +11,7 @@ stages:
   - resource_check
   - compile
   - test
+  - integration
 #  - native
 
 resource_check:
@@ -24,6 +25,10 @@ compile:
 test:
   stage: test
   script: "./mvnw test -B -V -Dsurefire.useFile=false -Dprofile=test"
+
+integration:
+  stage: integration
+  script: "./mvnw test -B -V -Dsurefire.useFile=false"
 
 #Disabled for now, locally uses a lot of resources to generate a container-friendly native image.
 #native:
