--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,22 @@
   <groupId>rob.thompson</groupId>
   <artifactId>dep-persistence</artifactId>
   <version>1.0.0-SNAPSHOT</version>
+
   <properties>
     <kotlin.compiler.jvmTarget>1.8</kotlin.compiler.jvmTarget>
     <kotlin.version>1.3.60</kotlin.version>
+
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
+
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-    <quarkus.version>0.26.1</quarkus.version>
+
+    <quarkus.version>1.1.1.Final</quarkus.version>
+
     <surefire-plugin.version>2.22.0</surefire-plugin.version>
   </properties>
+
   <dependencyManagement>
     <dependencies>
       <dependency>
@@ -26,6 +32,7 @@
       </dependency>
     </dependencies>
   </dependencyManagement>
+
   <dependencies>
     <dependency>
       <groupId>io.quarkus</groupId>
@@ -66,10 +73,6 @@
     </dependency>
     <dependency>
       <groupId>io.quarkus</groupId>
-      <artifactId>quarkus-spring-web</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>io.quarkus</groupId>
       <artifactId>quarkus-jdbc-mysql</artifactId>
     </dependency>
     <dependency>
@@ -85,22 +88,15 @@
       <artifactId>quarkus-smallrye-openapi</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.jboss.jandex</groupId>
-      <artifactId>jandex-maven-plugin</artifactId>
-      <version>1.0.6</version>
-    </dependency>
-    <dependency>
       <groupId>com.h2database</groupId>
       <artifactId>h2</artifactId>
       <scope>test</scope>
     </dependency>
 
-    <!-- Required to build native images -->
     <dependency>
-      <groupId>org.jboss.spec.javax.security.jacc</groupId>
-      <artifactId>jboss-jacc-api_1.5_spec</artifactId>
-      <scope>native</scope>
-      <!-- managed in io.quarkus:quarkus-bom -->
+      <groupId>jakarta.security.jacc</groupId>
+      <artifactId>jakarta.security.jacc-api</artifactId>
+      <version>1.6.1</version>
     </dependency>
   </dependencies>
 
@@ -180,7 +176,7 @@
       <plugin>
         <groupId>org.jboss.jandex</groupId>
         <artifactId>jandex-maven-plugin</artifactId>
-        <version>1.0.6</version>
+        <version>1.0.7</version>
         <executions>
           <execution>
             <id>make-index</id>
@@ -193,7 +189,7 @@
           <dependency>
             <groupId>org.jboss</groupId>
             <artifactId>jandex</artifactId>
-            <version>2.1.1.Final</version>
+            <version>2.1.2.Final</version>
           </dependency>
         </dependencies>
       </plugin>
