Changed and added some more tests.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,6 +16,10 @@ quarkus.hibernate-orm.log.sql=true
 #quarkus.flyway.baseline-version=0
 quarkus.flyway.migrate-at-start=true
 
+### Native config
+%native.quarkus.native.container-build=true
+%native.quarkus.native.container-runtime=docker
+
 ### Test Properties
 %test.quarkus.datasource.url=jdbc:h2:mem:testdb;MODE=MySQL
 %test.quarkus.datasource.driver=org.h2.Driver
