--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,6 +16,7 @@ jobs:
       uses: actions/cache@v1.1.2
       with:
         path: ./m2
+        key: restore
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
