--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -16,7 +16,8 @@ jobs:
       uses: actions/cache@v1.1.2
       with:
         path: ./m2
-        key: restore
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-maven-
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
       with:
